Added mint year for coins, generation in dungeons, nbt data

--- a/src/main/resources/assets/numismacraft/lang/en_us.json
+++ b/src/main/resources/assets/numismacraft/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "item.numismacraft.penny": "Penny",
+  "item.numismacraft.coin.tooltip": "Minted in %d",
   "item.numismacraft.nickel": "Nickel",
   "item.numismacraft.dime": "Dime",
   "item.numismacraft.quarter": "Quarter",
