Added appraisal table in en_us.json

--- a/src/main/resources/assets/numismacraft/lang/en_us.json
+++ b/src/main/resources/assets/numismacraft/lang/en_us.json
@@ -4,5 +4,6 @@
   "item.numismacraft.nickel": "Nickel",
   "item.numismacraft.dime": "Dime",
   "item.numismacraft.quarter": "Quarter",
+  "block.numismacraft.appraisal_table": "Appraisal Table",
   "itemGroup.numismacraft.general": "Numismacraft"
 }
