Added coin bag. NEED TO CHANGE INVENTORY

--- a/src/main/resources/assets/numismacraft/lang/en_us.json
+++ b/src/main/resources/assets/numismacraft/lang/en_us.json
@@ -5,5 +5,6 @@
   "item.numismacraft.dime": "Dime",
   "item.numismacraft.quarter": "Quarter",
   "block.numismacraft.appraisal_table": "Appraisal Table",
+  "block.numismacraft.coin_bag": "Coin Bag",
   "itemGroup.numismacraft.general": "Numismacraft"
 }
