fixed rarity! added tooltips for the new data

--- a/src/main/resources/assets/numismacraft/lang/en_us.json
+++ b/src/main/resources/assets/numismacraft/lang/en_us.json
@@ -1,5 +1,6 @@
 {
-  "item.numismacraft.coin.tooltip": "%s\n %d %s",
+  "item.numismacraft.coin.tooltip_1": "%s",
+  "item.numismacraft.coin.tooltip_2": "%d %s",
   "item.numismacraft.penny": "Penny",
   "item.numismacraft.nickel": "Nickel",
   "item.numismacraft.dime": "Dime",
