Added small_dollar, fixed coin purse bugs, finished loot tables, updated code to 1.19

--- a/src/main/resources/assets/numismacraft/lang/en_us.json
+++ b/src/main/resources/assets/numismacraft/lang/en_us.json
@@ -12,6 +12,7 @@
   "item.numismacraft.quarter": "Quarter",
   "item.numismacraft.half_dollar": "Half Dollar",
   "item.numismacraft.dollar": "Dollar",
+  "item.numismacraft.small_dollar": "Small Dollar",
   "item.numismacraft.quarter_eagle": "Quarter Eagle",
   "item.numismacraft.half_eagle": "Half Eagle",
   "item.numismacraft.eagle": "Eagle",
