complete rework of the coin items

--- a/src/main/resources/assets/numismacraft/lang/en_us.json
+++ b/src/main/resources/assets/numismacraft/lang/en_us.json
@@ -6,17 +6,37 @@
   "item.numismacraft.coin.tooltip_1_5": "%s",
   "item.numismacraft.coin.tooltip_2": "%d %s",
   "item.numismacraft.coin_purse": "Coin Purse",
-  "item.numismacraft.penny": "Penny",
-  "item.numismacraft.nickel": "Nickel",
-  "item.numismacraft.dime": "Dime",
-  "item.numismacraft.quarter": "Quarter",
-  "item.numismacraft.half_dollar": "Half Dollar",
-  "item.numismacraft.dollar": "Dollar",
-  "item.numismacraft.small_dollar": "Small Dollar",
-  "item.numismacraft.quarter_eagle": "Quarter Eagle",
-  "item.numismacraft.half_eagle": "Half Eagle",
-  "item.numismacraft.eagle": "Eagle",
-  "item.numismacraft.double_eagle": "Double Eagle",
+  "item.numismacraft.flying_eagle_cent_penny": "Flying Eagle Cent",
+  "item.numismacraft.liberty_headdress_penny": "Indian Head Cent",
+  "item.numismacraft.lincoln_penny": "Lincoln Penny",
+  "item.numismacraft.lincoln_steel_penny": "Lincoln Steel Penny",
+  "item.numismacraft.shield_nickel": "Shield Nickel",
+  "item.numismacraft.liberty_nickel": "Liberty Nickel",
+  "item.numismacraft.jefferson_old_nickel": "Jefferson Nickel",
+  "item.numismacraft.jefferson_westward_nickel": "Jefferson Nickel",
+  "item.numismacraft.jefferson_nickel": "Jefferson Nickel",
+  "item.numismacraft.barber_dime": "Barber Dime",
+  "item.numismacraft.mercury_dime": "Mercury Dime",
+  "item.numismacraft.roosevelt_dime": "Roosevelt Dime",
+  "item.numismacraft.barber_quarter": "Barber Quarter",
+  "item.numismacraft.standing_liberty_quarter": "Standing Liberty Quarter",
+  "item.numismacraft.washington_old_quarter": "Washington Quarter",
+  "item.numismacraft.washington_state_quarter": "Washington Quarter",
+  "item.numismacraft.washington_quarter": "Washington Quarter",
+  "item.numismacraft.barber_half_dollar": "Barber Half Dollar",
+  "item.numismacraft.walking_liberty_half_dollar": "Walking Liberty Half Dollar",
+  "item.numismacraft.franklin_half_dollar": "Franklin Half Dollar",
+  "item.numismacraft.kennedy_half_dollar": "Kennedy Half Dollar",
+  "item.numismacraft.morgan_dollar": "Morgan Dollar",
+  "item.numismacraft.peace_dollar": "Peace Dollar",
+  "item.numismacraft.eisenhower_dollar": "Eisenhower Dollar",
+  "item.numismacraft.susan_dollar": "Susan Dollar",
+  "item.numismacraft.sacagawea_dollar": "Sacagawea Dollar",
+  "item.numismacraft.presidential_dollar": "Presidential Dollar",
+  "item.numismacraft.indian_head_quarter_eagle": "Indian Head Quarter Eagle",
+  "item.numismacraft.indian_head_half_eagle": "Indian Head Half Eagle",
+  "item.numismacraft.indian_head_eagle": "Indian Head Eagle",
+  "item.numismacraft.saint_gaudens_double_eagle": "Saint-Gaudens Double Eagle",
   "block.numismacraft.appraisal_table": "Appraisal Table",
   "block.numismacraft.coin_bag": "Coin Bag",
   "itemGroup.numismacraft.general": "Numismacraft"
